nulls for bounded formulas