@@ -2,14 +2,15 @@ package edu.berkeley.cs.netsys.privacy_proxy.solver;
 
 import com.google.common.collect.ImmutableSet;
 import com.microsoft.z3.BoolExpr;
-import com.microsoft.z3.Sort;
 import edu.berkeley.cs.netsys.privacy_proxy.solver.context.Z3ContextWrapper;
 
-import java.util.Collections;
 import java.util.List;
 
 import static com.google.common.base.Preconditions.*;
 
+/**
+ * A foreign key dependency from one column to another.  Applies only to non-null values in the "from" column.
+ */
 public record ForeignKeyDependency(
         String fromRelation, String fromColumn, String toRelation, String toColumn) implements Dependency {
     public ForeignKeyDependency(String fromRelation, String fromColumn, String toRelation, String toColumn) {
@@ -22,30 +23,32 @@ public record ForeignKeyDependency(
     @Override
     public <C extends Z3ContextWrapper<?, ?, ?, ?>> Iterable<BoolExpr> apply(Instance<C> instance) {
         Schema<C> schema = instance.getSchema();
-        int fromIndex = schema.getColumnNames(fromRelation).indexOf(fromColumn);
-        checkArgument(fromIndex >= 0);
-        int toIndex = schema.getColumnNames(toRelation).indexOf(toColumn);
-        checkArgument(toIndex >= 0);
-        PSJ<C> selectFromQuery = new PSJ<>(schema, Collections.singletonList(fromRelation)) {
+        int fromColIndex = schema.getColumnNames(fromRelation).indexOf(fromColumn);
+        checkArgument(fromColIndex >= 0);
+        int toColIndex = schema.getColumnNames(toRelation).indexOf(toColumn);
+        checkArgument(toColIndex >= 0);
+        PSJ<C> selectFromQuery = new PSJ<>(schema, List.of(fromRelation)) {
             @Override
-            protected Tuple<C> headSelector(List<Tuple<C>> tuples) {
-                return new Tuple<>(getSchema(), tuples.get(0).get(fromIndex));
+            protected BoolExpr predicateGenerator(List<Tuple<C>> tuples) {
+                checkArgument(tuples.size() == 1); // The query `SELECT`s from one table.
+                Tuple<C> tuple = tuples.get(0);
+                return schema.getContext().mkSqlIsNotNull(tuple.get(fromColIndex));
             }
 
             @Override
-            protected Sort[] headTypeSelector(Sort[]... types) {
-                return new Sort[]{types[0][fromIndex]};
+            protected List<RelationColumnPair> headSelector() {
+                return List.of(new RelationColumnPair(0, fromColIndex));
             }
         };
-        PSJ<C> selectToQuery = new PSJ<>(schema, Collections.singletonList(toRelation)) {
+        PSJ<C> selectToQuery = new PSJ<>(schema, List.of(toRelation)) {
             @Override
-            protected Tuple<C> headSelector(List<Tuple<C>> tuples) {
-                return new Tuple<>(getSchema(), tuples.get(0).get(toIndex));
+            protected BoolExpr predicateGenerator(List<Tuple<C>> tuples) {
+                return schema.getContext().mkTrue();
             }
 
             @Override
-            protected Sort[] headTypeSelector(Sort[]... types) {
-                return new Sort[]{types[0][toIndex]};
+            protected List<RelationColumnPair> headSelector() {
+                return List.of(new RelationColumnPair(0, toColIndex));
             }
         };
         return selectFromQuery.apply(instance).isContainedInExpr(selectToQuery.apply(instance));
@@ -63,6 +66,7 @@ public record ForeignKeyDependency(
     public ImmutableSet<String> getFromRelations() {
         return ImmutableSet.of(fromRelation);
     }
+
     @Override
     public ImmutableSet<String> getToRelations() {
         return ImmutableSet.of(toRelation);
